# template-devnets

./: .gitignore  .sops.yaml  .tool-versions  README.md  pyproject.toml  requirements.txt  setup.sh
.github/actions/setup/: action.yaml
.github/workflows/: hive-devnet-0.yaml  hive-devnet-0.yaml.no_run  lint-ansible.yaml  lint-helm.yaml  lint-terraform.yaml  syncoor-devnet-0.yaml  syncoor-devnet-3.yaml  syncoor-generate-index.yaml
ansible/: ansible.cfg  cleanup_ethereum.yaml  install_dependencies.sh  playbook.yaml  requirements.yaml  whose_validator.zsh
ansible/group_vars/all/: defaults.yaml
ansible/inventories/devnet-0/: inventory.ini
ansible/inventories/devnet-1/: inventory.ini
kubernetes/devnet-0/assertoor/: values.yaml
kubernetes/devnet-0/blobscan/: values.yaml
kubernetes/devnet-0/blockscout/: values.yaml
kubernetes/devnet-0/checkpointz/: values.yaml
kubernetes/devnet-0/config/: values.yaml
kubernetes/devnet-0/dora/: endpoints-cl.yaml  endpoints-el.yaml  values.yaml
kubernetes/devnet-0/dugtrio/: values.yaml
kubernetes/devnet-0/erpc/: Chart.yaml  values.yaml
kubernetes/devnet-0/faucet/: values.yaml
kubernetes/devnet-0/forkmon/: values.yaml
kubernetes/devnet-0/forky/: values.yaml
kubernetes/devnet-0/homepage/: values.yaml
md/: sync.py
scripts/: run.zsh
terraform/devnet-0/: .terraform.lock.hcl  ansible_inventory.tmpl  cloudflare.tf  digitalocean.tf  firewall.tf  hetzner.tf  hetzner.tf.disabled  main.tf  nodes.tf  outputs.tf  ssh_config.tmpl
terraform/devnet-1/: digitalocean.tf  main.tf  ssh_config  ssh_config.tmpl
(+128 files in other folders)
