[project]
name = "template-devnets"
version = "0.1.0"
description = "Infrastructure code for Dev/Testnets"
requires-python = ">=3.9"
dependencies = [
    "ansible-lint==24.6.0",
    "ansible==10.1.0",
    "molecule-containers==2.0.0",
    "molecule==24.6.0",
    "netaddr==1.3.0",
    "pip==24.0",
    "requests==2.31",  # Fix for not being able to run 'molecule test' using docker on mac. Issue: https://github.com/docker/docker-py/issues/3256
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []